--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       <form action="" method="post">
         <p>Digite seu nome:</p>
         <input type="text" name="nome">
+        <br>
+        <p>digite seu gmail</p>
+        <input type="email" name="email">
       </form>
 </body>
 </html>
