--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       <form action="" method="post">
         <p>Digite seu nome:</p>
         <input type="text" name="nome">
-        <br>
-        <p>digite seu gmail</p>
+        <p>Digite seu gmail</p>
         <input type="email" name="email">
+        <p>Numero de telefone</p>
+        <input type="number" name="phono">
       </form>
 </body>
 </html>
