--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
       <form action="" method="post">
         <p>Digite seu nome:</p>
-        <input type="text" name="nome">
+        <input type="text" name="nome" placeholder="Ex: juan rosa">
         <p>Digite seu gmail</p>
-        <input type="email" name="email">
+        <input type="email" name="email" placeholder="gmail.com">
         <p>Numero de telefone</p>
-        <input type="number" name="phono">
+        <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
+        <p></p>
+
       </form>
 </body>
 </html>
