--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Formulario 2O</title>
 </head>
 <body>
+    
       <form action="" method="post">
-        <p>Digite seu nome:</p>
-        <input type="text" name="nome" placeholder="Ex: juan rosa">
-        <p>Digite seu gmail</p>
+        <p>Nome:</p>
+        <input type="text" name="nome" placeholder="Nome completo">
+        <p>Gmail</p>
         <input type="email" name="email" placeholder="gmail.com">
-        <p>Numero de telefone</p>
+        <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
+        <p></p>
+        <input type="radio" name="work" value="Sim"> Com certeza
         <p></p>
 
       </form>
