--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
         <p></p>
         <input type="radio" name="work" value="Sim"> Com certeza
+        <input type="radio" name="work" value="Não"> Sem certeza
         <p></p>
 
       </form>
