--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>Nome:</p>
         <input type="text" name="nome" placeholder="Nome completo">
         <p>Gmail</p>
-        <input type="email" name="email" placeholder="gmail.com">
+        <input type="email" name="email" placeholder="Digite se numero">
         <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
         <p></p>
