--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>Formulario 2O</title>
 </head>
 <body>
-    
+    <center>
       <form action="" method="post">
         <p>Nome:</p>
         <input type="text" name="nome" placeholder="Nome completo">
         <p>Gmail</p>
-        <input type="email" name="email" placeholder="Digite se numero">
+        <input type="email" name="email" placeholder="Digite se @gmail">
         <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
         <p></p>
         <input type="radio" name="work" value="Sim"> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
         <p></p>
-
-      </form>
+    </form>
+</center>
 </body>
 </html>
