--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <p>Nome:</p>
         <input type="text" name="nome" placeholder="Nome completo">
         <p>Gmail</p>
-        <input type="email" name="email" placeholder="Digite se @gmail">
+        <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
         <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
         <p></p>
         <input type="radio" name="work" value="Sim"> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
         <p></p>
+        <input type="checkbox" name="novidades"> aceitar receber novidades da empresa
     </form>
 </center>
 </body>
