--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
         <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
-        <p></p>
+        <p>voce trabalha?</p>
         <input type="radio" name="work" value="Sim"> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
-        <p></p>
+        <p>notificacoes</p>
         <input type="checkbox" name="novidades"> aceitar receber novidades da empresa
     </form>
 </center>
