--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <p>Telefone</p>
         <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
         <p>voce trabalha?</p>
-        <input type="radio" name="work" value="Sim"> Com certeza
+        <input type="radio" name="work" value="Sim" checked> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
         <p>notificacoes</p>
-        <input type="checkbox" name="novidades"> aceitar receber novidades da empresa
+        <input type="checkbox" name="novidades" checked> aceitar receber novidades da empresa
+    
     </form>
 </center>
 </body>
