--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <center>
       <form action="" method="post">
-        <p>Nome:</p>
-        <input type="text" name="nome" placeholder="Nome completo">
+        <h1>Nome</h1>
+        <input type="text" name="nome" placeholder="Nome completo"> 
         <p>Gmail</p>
         <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
         <p>Telefone</p>
