--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
       <form action="" method="post">
-        <h1>Nome</h1>
+        <p>Nome</p>
         <input type="text" name="nome" placeholder="Nome completo"> 
         <p>Gmail</p>
         <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
@@ -17,6 +17,14 @@
         <p>voce trabalha?</p>
         <input type="radio" name="work" value="Sim" checked> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
+        <p></p>
+        <select name="estado" id="">
+            <option value="1">Acre</option>
+            <option value="2">Parana</option>
+            <option value="3">Amapa</option>
+            <option value="4">Goiais</option>
+            <option value="5">Sao Paulo</option>
+        </select>
         <p>notificacoes</p>
         <input type="checkbox" name="novidades" checked> aceitar receber novidades da empresa
     
