--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <option value="4">Goiais</option>
             <option value="5">Sao Paulo</option>
         </select>
+        <p></p>
+<textarea name="feedback" id=""></textarea>
+
+
         <p>notificacoes</p>
         <input type="checkbox" name="novidades" checked> aceitar receber novidades da empresa
     
