--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option value="5">Sao Paulo</option>
         </select>
         <p></p>
-<textarea name="feedback" id=""></textarea>
+<textarea name="feedback" id="" placeholder="Reclame aqui"></textarea>
 
 
 <br>
