--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
       <form action="" method="post">
         <p>Nome</p>
-        <input type="text" name="nome" placeholder="Nome completo"> 
+        <input type="text" height="center" name="nome" placeholder="Nome completo"> 
         <p>Gmail</p>
         <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
         <p>Telefone</p>
