--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
       <form action="" method="post">
         <p>Nome</p>
-        <input type="text" height="center" name="nome" placeholder="Nome completo"> 
+        <input type="text" name="nome" placeholder="Nome completo"> 
         <p>Gmail</p>
         <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
         <p>Telefone</p>
@@ -27,10 +27,11 @@
         </select>
         <p></p>
 <textarea name="feedback" id="" placeholder="Reclame aqui"></textarea>
-
-
 <br>
         <input type="checkbox" name="novidades" checked> aceitar receber novidades da empresa
+        <br>
+        <button type="submit">enviar</button>
+        <button type="reset">Cancelar</button>
     
     </form>
 </center>
