--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <center>
       <form action="" method="post">
         <p>Nome</p>
-        <input type="text" name="nome" placeholder="Nome completo"> 
+        <input type="text" name="nome" placeholder="Nome completo" required> 
         <p>Gmail</p>
-        <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br">
+        <input type="email" name="email" placeholder="Digite se @escola" value="@escola.pr.gov.br" required>
         <p>Telefone</p>
-        <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX">
+        <input type="number" name="phono" placeholder="(XX) XXXXX-XXXX" required>
         <p>voce trabalha?</p>
         <input type="radio" name="work" value="Sim" checked> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
