--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input type="radio" name="work" value="Sim" checked> Com certeza
         <input type="radio" name="work" value="Não"> Sem certeza
         <p></p>
-        <select name="estado" id="">
+        <select name="estado" id="" required>
             <option value="1">Acre</option>
             <option value="2">Parana</option>
             <option value="3">Amapa</option>
