--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option value="5">Sao Paulo</option>
         </select>
         <p></p>
-<textarea name="feedback" id="" placeholder="Reclame aqui"></textarea>
+<textarea name="feedback" id="" placeholder="Reclame aqui"></textarea required>
 <br>
         <input type="checkbox" name="novidades" checked> aceitar receber novidades da empresa
         <br>
