--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-      <form action="" method="post">
+      <form action="https://formspree.io/f/movawwya" method="post">
         <p>Nome</p>
         <input type="text" name="nome" placeholder="Nome completo" required> 
         <p>Gmail</p>
@@ -37,19 +37,3 @@
 </center>
 </body>
 </html>
-
-<form
-  action="https://formspree.io/f/movawwya"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
